attempt to fix border radius issue on mobile 2

--- a/src/assets/Styles/workitem.scss
+++ b/src/assets/Styles/workitem.scss
@@ -148,6 +148,8 @@
         .cover_container::before{
             content:'';
             background: none;
+            position:static;
+            backdrop-filter:blur(0);
         }
     }
 }
